--- a/Aula 6 - Teste de Hipótese - 1134.ipynb
+++ b/Aula 6 - Teste de Hipótese - 1134.ipynb
@@ -114,15 +114,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-10T21:40:57.308294Z",
      "start_time": "2021-12-10T21:40:57.305328Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting norm\n",
+      "  Downloading norm-1.6.0-py3-none-any.whl (11 kB)\n",
+      "Installing collected packages: norm\n",
+      "Successfully installed norm-1.6.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install norm "
+   ]
   },
   {
    "cell_type": "markdown",
